--- a/android/app/src/main/res/xml/file_paths.xml
+++ b/android/app/src/main/res/xml/file_paths.xml
@@ -2,4 +2,5 @@
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
     <files-path name="my_files" path="." />
     <cache-path name="my_cache" path="." />
+    <external-path name="my_external" path="." />
 </paths>
